# apple-apis-rs

./: .gitignore  Cargo.toml  README.md
apple-app-store-connect-api/: .gitignore  Cargo.toml  README.md
apple-app-store-connect-api/tests/v1/response_body_gzip_files/: README.md
apple-app-store-connect-api/tests/v1/response_body_json_files/: README.md  salesReports__err__NOT_AUTHORIZED.json  salesReports__err__NOT_FOUND.json
apple-app-store-connect-api/tests/v1/response_body_json_files/salesReports/: err_2.json  err_3.json  err_4.json  err_5.json
apple-app-store-receipts/: .gitignore  Cargo.toml  README.md
apple-app-store-receipts/demo/: Cargo.toml
apple-app-store-receipts/demo/src/: iap_verify_receipt.rs
apple-app-store-receipts/src/: lib.rs
apple-app-store-receipts/src/endpoints/: mod.rs  verify_receipt.rs
apple-app-store-receipts/src/objects/: mod.rs  request_body.rs  response_body.rs
apple-app-store-receipts/src/types/: status.rs
apple-app-store-receipts/tests/: endpoint_verify_receipt.rs  response_body_json_files.rs  verify_receipt_files.rs
apple-app-store-server-notifications/: Cargo.toml  README.md
apple-business-chat-api/: Cargo.toml  README.md
apple-classkit-catalog-api/: Cargo.toml  README.md
apple-device-management/: Cargo.toml  README.md
apple-iad/: Cargo.toml  README.md
apple-itc-reporter/: Cargo.toml  README.md
apple-itunes-search-api/: Cargo.toml  README.md
apple-maps-web-snapshots/: Cargo.toml  README.md
apple-music-api/: Cargo.toml  README.md
apple-news/: Cargo.toml  README.md
apple-search-ads/: Cargo.toml  README.md
apple-search-ads/demo/: Cargo.toml
apple-search-ads/demo/src/: search_ads_get_all_campaigns.rs  search_ads_get_me_details.rs  search_ads_get_reports_with_granularity.rs  search_ads_get_user_acl.rs
apple-search-ads/src/: lib.rs  serde_aux_ext.rs
apple-search-ads/src/endpoints/: common.rs  get_ad_group_level_reports.rs  get_all_campaigns.rs  get_campaign_level_reports.rs  get_keyword_level_reports.rs  get_me_details.rs  get_search_term_level_reports.rs  get_user_acl.rs  mod.rs
apple-search-ads/src/objects/: api_error_response.rs  campaign.rs  campaign_app_detail.rs  campaign_country_or_region_serving_state_reasons.rs  campaign_list_response.rs  condition.rs  error_response_body.rs  error_response_item.rs  extended_spend_row.rs  grand_totals_row.rs  keyword.rs  keyword_bid_recommendation.rs  keyword_insights.rs  loc_invoice_details.rs  me_detail.rs  me_detail_response.rs  mod.rs  money.rs  page_detail.rs  pagination.rs  reporting_ad_group.rs  reporting_campaign.rs  reporting_data_response.rs  reporting_keyword.rs  reporting_request.rs  reporting_response.rs  reporting_response_body.rs  reporting_search_term.rs  row.rs  selector.rs  sorting.rs  spend_row.rs  user_acl.rs  user_acl_list_response.rs
apple-search-ads/src/types/: currency.rs  mod.rs  payment_model.rs  region.rs
apple-search-ads/src/v3/: mod.rs
apple-search-ads/src/v3/endpoints/: get_ad_group_level_reports.rs  get_all_campaigns.rs  get_campaign_level_reports.rs  get_keyword_level_reports.rs  get_search_term_level_reports.rs  get_user_acl.rs  mod.rs
apple-search-ads/src/v3/objects/: campaign.rs  campaign_app_detail.rs  campaign_country_or_region_serving_state_reasons.rs  campaign_list_response.rs  condition.rs  error_response_body.rs  error_response_item.rs  extended_spend_row.rs  grand_totals_row.rs  keyword.rs  keyword_bid_recommendation.rs  keyword_insights.rs  loc_invoice_details.rs  mod.rs  money.rs  page_detail.rs  pagination.rs  reporting_ad_group.rs  reporting_campaign.rs  reporting_data_response.rs  reporting_keyword.rs  reporting_request.rs  reporting_response.rs  reporting_response_body.rs  reporting_search_term.rs  row.rs  selector.rs  sorting.rs  spend_row.rs  user_acl.rs  user_acl_list_response.rs
apple-search-ads/src/v3/types/: currency.rs  mod.rs  payment_model.rs  region.rs
apple-search-ads/tests/v3/request_body_json_files/: README.md  get_ad_group_level_reports.json  get_ad_group_level_reports_using_group_by_field_with_geo_values.json  get_campaign_level_reports.json  get_campaign_level_reports_with_granularity.json  get_keyword_level_reports.json  get_search_term_level_reports.json
apple-search-ads/tests/v3/response_body_json_files/: README.md  campaign_list_response.json  campaign_list_response_with_empty.json  error_with_unauthorized.json  get_ad_group_level_reports.json  get_campaign_level_reports.json  get_campaign_level_reports_with_granularity.json  get_keyword_level_reports.json  get_search_term_level_reports.json  reporting_response_body_with_empty.json  user_acl_list_response.json
apple-search-ads/tests/v4/request_body_json_files/: README.md  get_campaign_level_reports_payload_example_1.json  get_campaign_level_reports_payload_example_2.json  get_campaign_level_reports_payload_example_3.json
apple-search-ads/tests/v4/response_body_json_files/: README.md  get_me_details_response.json  user_acl_list_response.json
apple-wallet-passes/: Cargo.toml  README.md
apple-web-service-client/: Cargo.toml  README.md
apple-web-service-client/src/: lib.rs
apple-web-service-endpoint/: Cargo.toml  README.md
apple-web-service-endpoint/src/: lib.rs
apple-web-service-isahc-client/: Cargo.toml  README.md
apple-web-service-isahc-client/src/: lib.rs
demos/async-std/: Cargo.toml
demos/async-std/src/: iap_verify_receipt.rs
demos/isahc/: Cargo.toml
demos/isahc/src/: iap_verify_receipt.rs  search_ads_get_all_campaigns.rs  search_ads_get_reports_with_granularity.rs  search_ads_get_user_acl.rs
