[package]
name = "apple-app-store-receipts"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Apple - App Store Receipts"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/appleapis"
homepage = "https://github.com/bk-rs/appleapis"
documentation = "https://docs.rs/apple-app-store-receipts"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["with-base64"]
with-base64 = ["base64"]

[dependencies]
apple-web-service-endpoint = { path = "../apple-web-service-endpoint", version = "0.1", default-features = false, features = [] }

serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = [] }
serde-aux = { version = "2.1", default-features = false, features = ["chrono"] }
base64 = { version = "0.13", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
apple-web-service-isahc-client = { path = "../apple-web-service-isahc-client", version = "0.1", default-features = false, features = [] }

serde_test = "1.0"
futures-lite = { version = "1.0", default-features = false, features = ["std"] }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
