[package]
name = "apple-app-store-server-notifications"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Apple - App Store Server Notifications"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/apple-apis-rs"
homepage = "https://github.com/bk-rs/apple-apis-rs"
documentation = "https://docs.rs/apple-app-store-server-notifications"
keywords = []
categories = []
readme = "README.md"

[dependencies]
