[package]
name = "apple-itc-reporter"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Apple - Reporter"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/apple-apis-rs"
homepage = "https://github.com/bk-rs/apple-apis-rs"
documentation = "https://docs.rs/apple-itc-reporter"
keywords = []
categories = []
readme = "README.md"

[dependencies]
