[package]
name = "apple-itunes-search-api"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Apple - iTunes Search API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/apple-apis-rs"
homepage = "https://github.com/bk-rs/apple-apis-rs"
documentation = "https://docs.rs/apple-itunes-search-api"
keywords = []
categories = []
readme = "README.md"

[dependencies]
