[package]
name = "apple-music-api"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Apple - Apple Music API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/appleapis"
homepage = "https://github.com/bk-rs/appleapis"
documentation = "https://docs.rs/apple-music-api"
keywords = []
categories = []
readme = "README.md"

[dependencies]
