[package]
name = "apple-search-ads"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Apple - Apple Search Ads"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/apple-apis-rs"
homepage = "https://github.com/bk-rs/apple-apis-rs"
documentation = "https://docs.rs/apple-search-ads"
keywords = []
categories = []
readme = "README.md"

[dependencies]
apple-web-service-endpoint = { path = "../apple-web-service-endpoint", version = "0.1", default-features = false, features = [] }

serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
serde-enum-str = { version = "0.2", default-features = false, features = [] }
url = { version = "2.2", default-features = false, features = [] }
once_cell = { version = "1.5", default-features = false, features = ["std"] }
