[package]
name = "apple-search-ads"
version = "0.2.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Apple - Apple Search Ads"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/apple-apis-rs"
homepage = "https://github.com/bk-rs/apple-apis-rs"
documentation = "https://docs.rs/apple-search-ads"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client-endpoint = { version = "0.2", default-features = false }

serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
serde-enum-str = { version = "0.2", default-features = false }
url = { version = "2.2", default-features = false }
once_cell = { version = "1.5", default-features = false, features = ["std"] }
serde-aux = { version = "3.1", default-features = false }

thiserror = { version = "1.0", default-features = false }
