[package]
name = "apple-wallet-passes"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Apple - Wallet Passes"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/apple-apis-rs"
homepage = "https://github.com/bk-rs/apple-apis-rs"
documentation = "https://docs.rs/apple-wallet-passes"
keywords = []
categories = []
readme = "README.md"

[dependencies]
