[package]
name = "apple-web-service-client"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Apple - Web Service Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/appleapis"
homepage = "https://github.com/bk-rs/appleapis"
documentation = "https://docs.rs/apple-web-service-client"
keywords = []
categories = []
readme = "README.md"

[dependencies]
apple-web-service-endpoint = { path = "../apple-web-service-endpoint", version = "0.1", default-features = false, features = [] }

async-trait = { version = "0.1", default-features = false, features = [] }
