[package]
name = "apple-web-service-endpoint"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Apple - Web Service Endpoint"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/appleapis"
homepage = "https://github.com/bk-rs/appleapis"
documentation = "https://docs.rs/apple-web-service-endpoint"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http = { version = "0.2", default-features = false, features = [] }
