[package]
name = "apple-web-service-isahc-client"
version = "0.1.4"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Apple - Web Service Isahc Client"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/apple-apis-rs"
homepage = "https://github.com/bk-rs/apple-apis-rs"
documentation = "https://docs.rs/apple-web-service-isahc-client"
keywords = []
categories = []
readme = "README.md"

[dependencies]
apple-web-service-client = { path = "../apple-web-service-client", version = "0.1", default-features = false, features = [] }

isahc = { version = "1.4", default-features = false, features = [] }
