[package]
name = "apple-app-store-receipts-demo"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"


[[bin]]
name = "iap_verify_receipt"
path = "src/iap_verify_receipt.rs"

[dependencies]
apple-app-store-receipts = { path = ".." }

http-api-isahc-client = { version = "0.2", features = ["with-sleep-via-futures-timer"] }

futures-lite = { version = "1.12" }
env_logger = { version = "0.10" }
