[package]
name = "apple-search-ads-demo"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"

[[bin]]
name = "search_ads_get_all_campaigns"
path = "src/search_ads_get_all_campaigns.rs"

[[bin]]
name = "search_ads_get_me_details"
path = "src/search_ads_get_me_details.rs"

[[bin]]
name = "search_ads_get_reports_with_granularity"
path = "src/search_ads_get_reports_with_granularity.rs"

[[bin]]
name = "search_ads_get_user_acl"
path = "src/search_ads_get_user_acl.rs"

[dependencies]
apple-search-ads = { path = ".." }

http-api-isahc-client = { version = "0.2" }

futures-lite = { version = "1.11" }
env_logger = { version = "0.9" }
chrono = { version = "0.4" }
