[package]
name = "appleapis-demo-async-std"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "iap_verify_receipt"
path = "src/iap_verify_receipt.rs"

[dependencies]
apple-app-store-receipts = { path = "../../apple-app-store-receipts", version = "0.1" }
apple-web-service-isahc-client = { path = "../../apple-web-service-isahc-client", version = "0.1" }

async-std = { version = "1.6", default-features = false, features = ["default", "attributes"] }
