[package]
name = "appleapis-demo-isahc"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "search_ads_get_all_campaigns"
path = "src/search_ads_get_all_campaigns.rs"

[[bin]]
name = "search_ads_get_reports_with_granularity"
path = "src/search_ads_get_reports_with_granularity.rs"

[[bin]]
name = "search_ads_get_user_acl"
path = "src/search_ads_get_user_acl.rs"

[dependencies]
apple-search-ads = { path = "../../apple-search-ads", version = "0.1" }

apple-web-service-isahc-client = { version = "0.1" }

futures-lite = { version = "1.11" }
env_logger = { version = "0.8" }
chrono = { version = "0.4" }
serde_json = { version = "1.0" }
