[package]
name = "appleapis-demo-isahc"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "iap_verify_receipt"
path = "src/iap_verify_receipt.rs"

[[bin]]
name = "search_ads_get_all_campaigns"
path = "src/search_ads_get_all_campaigns.rs"

[[bin]]
name = "search_ads_get_reports_with_granularity"
path = "src/search_ads_get_reports_with_granularity.rs"

[[bin]]
name = "search_ads_get_user_acl"
path = "src/search_ads_get_user_acl.rs"

[dependencies]
apple-app-store-receipts = { path = "../../apple-app-store-receipts", version = "^0.2" }
apple-search-ads = { path = "../../apple-search-ads", version = "^0.2" }

http-api-isahc-client = { version = "0.2", features = ["with-sleep-via-futures-timer"] }

futures-lite = { version = "1.11" }
env_logger = { version = "0.9" }
chrono = { version = "0.4" }
serde_json = { version = "1.0" }
